@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2025 Hyland Software, Inc. and its affiliates.
+ * Copyright 2010-2026 Hyland Software, Inc. and its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -40,7 +40,7 @@ public class ExtensionElementsParser implements BpmnXMLConstants {
     ) throws Exception {
         BaseElement parentElement = null;
         if (!activeSubProcessList.isEmpty()) {
-            parentElement = activeSubProcessList.get(activeSubProcessList.size() - 1);
+            parentElement = activeSubProcessList.getLast();
         } else {
             parentElement = activeProcess;
         }
