@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2025 Hyland Software, Inc. and its affiliates.
+ * Copyright 2010-2026 Hyland Software, Inc. and its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -46,7 +46,7 @@ public class EndEventParseHandler extends AbstractActivityBpmnParseHandler<EndEv
     protected void executeParse(BpmnParse bpmnParse, EndEvent endEvent) {
         EventDefinition eventDefinition = null;
         if (endEvent.getEventDefinitions().size() > 0) {
-            eventDefinition = endEvent.getEventDefinitions().get(0);
+            eventDefinition = endEvent.getEventDefinitions().getFirst();
 
             if (eventDefinition instanceof ErrorEventDefinition) {
                 ErrorEventDefinition errorDefinition = (ErrorEventDefinition) eventDefinition;
