@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2025 Hyland Software, Inc. and its affiliates.
+ * Copyright 2010-2026 Hyland Software, Inc. and its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -329,7 +329,7 @@ public class DefaultHistoryManager extends AbstractManager implements HistoryMan
                 );
 
             if (historicActivityInstances.size() > 0) {
-                return historicActivityInstances.get(0);
+                return historicActivityInstances.getFirst();
             }
         }
 
