@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2025 Hyland Software, Inc. and its affiliates.
+ * Copyright 2010-2026 Hyland Software, Inc. and its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -156,7 +156,7 @@ public class MybatisProcessDefinitionDataManager
             params
         );
         if (results.size() == 1) {
-            return results.get(0);
+            return results.getFirst();
         } else if (results.size() > 1) {
             throw new ActivitiException(
                 "There are " +
@@ -187,7 +187,7 @@ public class MybatisProcessDefinitionDataManager
             params
         );
         if (results.size() == 1) {
-            return results.get(0);
+            return results.getFirst();
         } else if (results.size() > 1) {
             throw new ActivitiException(
                 "There are " +
