@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2025 Hyland Software, Inc. and its affiliates.
+ * Copyright 2010-2026 Hyland Software, Inc. and its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -100,7 +100,7 @@ public class ProcessDefinitionSuspensionTest extends PluggableActivitiTestCase {
         assertThat(processDefinitionList).hasSize(2);
         assertThat(repositoryService.createProcessDefinitionQuery().active().count()).isEqualTo(2);
 
-        ProcessDefinition processDefinition = processDefinitionList.get(0);
+        ProcessDefinition processDefinition = processDefinitionList.getFirst();
         repositoryService.suspendProcessDefinitionById(processDefinition.getId());
 
         assertThat(repositoryService.createProcessDefinitionQuery().count()).isEqualTo(2);
@@ -119,7 +119,7 @@ public class ProcessDefinitionSuspensionTest extends PluggableActivitiTestCase {
 
         assertThat(repositoryService.createProcessDefinitionQuery().active().count()).isEqualTo(2);
 
-        ProcessDefinition processDefinition = processDefinitionList.get(0);
+        ProcessDefinition processDefinition = processDefinitionList.getFirst();
         repositoryService.suspendProcessDefinitionById(processDefinition.getId());
 
         assertThat(repositoryService.createProcessDefinitionQuery().count()).isEqualTo(2);
