@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2025 Hyland Software, Inc. and its affiliates.
+ * Copyright 2010-2026 Hyland Software, Inc. and its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -129,7 +129,7 @@ public class AdhocSubProcessTest extends PluggableActivitiTestCase {
 
             assertThat(historicTasks).hasSize(3);
             List<String> taskDefinitionKeys = new ArrayList<String>(3);
-            taskDefinitionKeys.add(historicTasks.get(0).getTaskDefinitionKey());
+            taskDefinitionKeys.add(historicTasks.getFirst().getTaskDefinitionKey());
             taskDefinitionKeys.add(historicTasks.get(1).getTaskDefinitionKey());
             taskDefinitionKeys.add(historicTasks.get(2).getTaskDefinitionKey());
             assertThat(taskDefinitionKeys.contains("subProcessTask")).isTrue();
