@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2025 Hyland Software, Inc. and its affiliates.
+ * Copyright 2010-2026 Hyland Software, Inc. and its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -197,7 +197,7 @@ public class HistoricActivityInstanceTest extends PluggableActivitiTestCase {
             HistoricActivityInstance historicActivityInstance = historyService
                 .createHistoricActivityInstanceQuery()
                 .list()
-                .get(0);
+                .getFirst();
             assertThat(
                 historyService
                     .createHistoricActivityInstanceQuery()
@@ -504,7 +504,7 @@ public class HistoricActivityInstanceTest extends PluggableActivitiTestCase {
 
         // Complete both tasks, second task-complete should end the fork-gateway
         // and set time
-        taskService.complete(tasksToComplete.get(0).getId());
+        taskService.complete(tasksToComplete.getFirst().getId());
         taskService.complete(tasksToComplete.get(1).getId());
 
         List<HistoricActivityInstance> historicActivityInstance = historyService
@@ -518,7 +518,7 @@ public class HistoricActivityInstanceTest extends PluggableActivitiTestCase {
         // History contains 2 entries for parallel join (one for each path
         // arriving in the join), should contain end-time
         assertThat(historicActivityInstance).hasSize(2);
-        assertThat(historicActivityInstance.get(0).getEndTime()).isNotNull();
+        assertThat(historicActivityInstance.getFirst().getEndTime()).isNotNull();
         assertThat(historicActivityInstance.get(1).getEndTime()).isNotNull();
     }
 
