@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2025 Hyland Software, Inc. and its affiliates.
+ * Copyright 2010-2026 Hyland Software, Inc. and its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -30,6 +30,7 @@ import java.util.Map;
 import org.activiti.engine.ActivitiIllegalArgumentException;
 import org.activiti.engine.history.HistoricIdentityLink;
 import org.activiti.engine.history.HistoricProcessInstance;
+import org.activiti.engine.history.HistoricProcessInstanceQuery;
 import org.activiti.engine.impl.history.HistoryLevel;
 import org.activiti.engine.impl.test.PluggableActivitiTestCase;
 import org.activiti.engine.runtime.ProcessInstance;
@@ -38,6 +39,21 @@ import org.activiti.engine.task.Task;
 import org.activiti.engine.test.Deployment;
 
 public class HistoricProcessInstanceTest extends PluggableActivitiTestCase {
+
+    @Deployment(resources = {"org/activiti/engine/test/history/oneTaskProcess.bpmn20.xml"})
+    public void testHistoricProcessInstanceMaxResults() {
+        // GIVEN: 5 running process instances
+        for (int i=0; i<5; i++) {
+            runtimeService.startProcessInstanceByKey("oneTaskProcess", "myBusinessKey");
+        }
+
+        final HistoricProcessInstanceQuery query = historyService.createHistoricProcessInstanceQuery();
+        // WHEN: listing, at most, 3 running process instances
+        // THEN: the result must have 3 results
+        assertThat(query.listPage(0, 3)).hasSize(3);
+        // THEN: total number of process instances is 5
+        assertThat(query.count()).isEqualTo(5);
+    }
 
     @Deployment(resources = { "org/activiti/engine/test/history/oneTaskProcess.bpmn20.xml" })
     public void testHistoricDataCreatedForProcessExecution() {
@@ -83,7 +99,7 @@ public class HistoricProcessInstanceTest extends PluggableActivitiTestCase {
         // user completes the task (yes! he must be almost as fast as me)
         Date twentyFiveSecsAfterNoon = new Date(noon.getTime() + 25 * 1000);
         processEngineConfiguration.getClock().setCurrentTime(twentyFiveSecsAfterNoon);
-        taskService.complete(tasks.get(0).getId());
+        taskService.complete(tasks.getFirst().getId());
 
         historicProcessInstance = historyService
             .createHistoricProcessInstanceQuery()
@@ -804,7 +820,7 @@ public class HistoricProcessInstanceTest extends PluggableActivitiTestCase {
             .desc()
             .list();
         List<String> processInstanceIds = new ArrayList<String>(2);
-        processInstanceIds.add(historicProcessInstances.get(0).getId());
+        processInstanceIds.add(historicProcessInstances.getFirst().getId());
         processInstanceIds.add(historicProcessInstances.get(1).getId());
         assertThat(processInstanceIds.contains(processInstance1.getId())).isTrue();
         assertThat(processInstanceIds.contains(processInstance2.getId())).isTrue();
@@ -817,7 +833,7 @@ public class HistoricProcessInstanceTest extends PluggableActivitiTestCase {
             .includeProcessVariables()
             .list();
         processInstanceIds = new ArrayList<String>(2);
-        processInstanceIds.add(historicProcessInstances.get(0).getId());
+        processInstanceIds.add(historicProcessInstances.getFirst().getId());
         processInstanceIds.add(historicProcessInstances.get(1).getId());
         assertThat(processInstanceIds.contains(processInstance1.getId())).isTrue();
         assertThat(processInstanceIds.contains(processInstance2.getId())).isTrue();
@@ -864,10 +880,10 @@ public class HistoricProcessInstanceTest extends PluggableActivitiTestCase {
             );
             assertThat(historicLinks).hasSize(1);
 
-            assertThat(historicLinks.get(0).getType()).isEqualTo("myType");
-            assertThat(historicLinks.get(0).getUserId()).isEqualTo("kermit");
-            assertThat(historicLinks.get(0).getGroupId()).isNull();
-            assertThat(historicLinks.get(0).getProcessInstanceId()).isEqualTo(pi.getId());
+            assertThat(historicLinks.getFirst().getType()).isEqualTo("myType");
+            assertThat(historicLinks.getFirst().getUserId()).isEqualTo("kermit");
+            assertThat(historicLinks.getFirst().getGroupId()).isNull();
+            assertThat(historicLinks.getFirst().getProcessInstanceId()).isEqualTo(pi.getId());
 
             // When process is ended, link should remain
             taskService.complete(taskService.createTaskQuery().processInstanceId(pi.getId()).singleResult().getId());
@@ -895,11 +911,11 @@ public class HistoricProcessInstanceTest extends PluggableActivitiTestCase {
             );
             assertThat(historicLinks).hasSize(1);
 
-            assertThat(historicLinks.get(0).getType()).isEqualTo("myType");
-            assertThat(historicLinks.get(0).getUserId()).isEqualTo("kermit");
-            assertThat(historicLinks.get(0).getGroupId()).isNull();
-            assertThat(historicLinks.get(0).getProcessInstanceId()).isEqualTo(pi.getId());
-            assertThat(historicLinks.get(0).getDetails()).isEqualTo("details".getBytes());
+            assertThat(historicLinks.getFirst().getType()).isEqualTo("myType");
+            assertThat(historicLinks.getFirst().getUserId()).isEqualTo("kermit");
+            assertThat(historicLinks.getFirst().getGroupId()).isNull();
+            assertThat(historicLinks.getFirst().getProcessInstanceId()).isEqualTo(pi.getId());
+            assertThat(historicLinks.getFirst().getDetails()).isEqualTo("details".getBytes());
 
             // When process is ended, link should remain
             taskService.complete(taskService.createTaskQuery().processInstanceId(pi.getId()).singleResult().getId());
@@ -982,7 +998,7 @@ public class HistoricProcessInstanceTest extends PluggableActivitiTestCase {
             .includeProcessVariables()
             .list();
         assertThat(processInstances).hasSize(1);
-        processInstance = processInstances.get(0);
+        processInstance = processInstances.getFirst();
 
         assertThat(processInstance.getName()).isEqualTo(processInstanceName);
         assertThat(processInstance.getTenantId()).isEqualTo(tenantId);
@@ -998,7 +1014,7 @@ public class HistoricProcessInstanceTest extends PluggableActivitiTestCase {
             .includeProcessVariables()
             .list();
         assertThat(historicProcessInstances).hasSize(1);
-        HistoricProcessInstance historicProcessInstance = historicProcessInstances.get(0);
+        HistoricProcessInstance historicProcessInstance = historicProcessInstances.getFirst();
 
         // Verify name and tenant id (didn't work on mssql and db2) on process instance
         assertThat(historicProcessInstance.getName()).isEqualTo(processInstanceName);
