@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2025 Hyland Software, Inc. and its affiliates.
+ * Copyright 2010-2026 Hyland Software, Inc. and its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -50,8 +50,8 @@ public class ServiceTaskValidatorTest {
 
         //then
         assertThat(errors).hasSize(1);
-        assertThat(errors.get(0).getProblem()).isEqualTo("activiti-servicetask-missing-implementation");
-        assertThat(errors.get(0).getDefaultDescription()).isEqualTo(
+        assertThat(errors.getFirst().getProblem()).isEqualTo("activiti-servicetask-missing-implementation");
+        assertThat(errors.getFirst().getDefaultDescription()).isEqualTo(
             "One of the attributes 'implementation', 'class', 'delegateExpression', 'type', 'operation', or 'expression' is mandatory on serviceTask."
         );
     }
