@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2025 Hyland Software, Inc. and its affiliates.
+ * Copyright 2010-2026 Hyland Software, Inc. and its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -67,7 +67,7 @@ public class TaskRuntimeTaskAssigneeTest {
         Page<Task> tasks = taskRuntime.tasks(Pageable.of(0, 50));
 
         assertThat(tasks.getContent()).hasSize(1);
-        Task task = tasks.getContent().get(0);
+        Task task = tasks.getContent().getFirst();
 
         assertThat(task.getAssignee()).isEqualTo("dean");
         assertThat(task.getStatus()).isEqualTo(Task.TaskStatus.ASSIGNED);
@@ -79,7 +79,7 @@ public class TaskRuntimeTaskAssigneeTest {
         tasks = taskRuntime.tasks(Pageable.of(0, 50));
 
         assertThat(tasks.getContent()).hasSize(1);
-        task = tasks.getContent().get(0);
+        task = tasks.getContent().getFirst();
 
         assertThat(task.getAssignee()).isEqualTo("dean");
         assertThat(task.getStatus()).isEqualTo(Task.TaskStatus.ASSIGNED);
@@ -107,7 +107,7 @@ public class TaskRuntimeTaskAssigneeTest {
         Page<Task> tasks = taskRuntime.tasks(Pageable.of(0, 50));
 
         assertThat(tasks.getContent()).hasSize(1);
-        Task task = tasks.getContent().get(0);
+        Task task = tasks.getContent().getFirst();
 
         assertThat(task.getAssignee()).isNull();
         assertThat(task.getStatus()).isEqualTo(Task.TaskStatus.CREATED);
@@ -128,7 +128,7 @@ public class TaskRuntimeTaskAssigneeTest {
 
         assertThat(tasks.getContent()).hasSize(1);
 
-        Task task = tasks.getContent().get(0);
+        Task task = tasks.getContent().getFirst();
         assertThat(task.getAssignee()).isNull();
         assertThat(task.getStatus()).isEqualTo(Task.TaskStatus.CREATED);
 
@@ -143,7 +143,7 @@ public class TaskRuntimeTaskAssigneeTest {
         tasks = taskRuntime.tasks(Pageable.of(0, 50));
 
         assertThat(tasks.getContent()).hasSize(1);
-        task = tasks.getContent().get(0);
+        task = tasks.getContent().getFirst();
 
         assertThat(task.getAssignee()).isEqualTo("garth");
 
@@ -167,7 +167,7 @@ public class TaskRuntimeTaskAssigneeTest {
 
         assertThat(tasks.getContent()).hasSize(1);
 
-        Task task = tasks.getContent().get(0);
+        Task task = tasks.getContent().getFirst();
         assertThat(task.getAssignee()).isNull();
         assertThat(task.getStatus()).isEqualTo(Task.TaskStatus.CREATED);
 
@@ -190,7 +190,7 @@ public class TaskRuntimeTaskAssigneeTest {
         tasks = taskRuntime.tasks(Pageable.of(0, 50));
 
         assertThat(tasks.getContent()).hasSize(1);
-        task = tasks.getContent().get(0);
+        task = tasks.getContent().getFirst();
 
         assertThat(task.getAssignee()).isEqualTo("dean");
 
