@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2025 Hyland Software, Inc. and its affiliates.
+ * Copyright 2010-2026 Hyland Software, Inc. and its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -50,7 +50,7 @@ public class MyTransactionalOperationTransactionDependentExecutionListener
                 .orderByProcessInstanceStartTime()
                 .asc()
                 .list();
-            historyService.deleteHistoricProcessInstance(historicProcessInstances.get(0).getId());
+            historyService.deleteHistoricProcessInstance(historicProcessInstances.getFirst().getId());
         }
     }
 }
